--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "bugs": {
     "url": "https://github.com/AuDang/Redux-Project/issues"
   },
-  "homepage": "https://github.com/AuDang/Redux-Project#readme"
+  "homepage": "https://github.com/AuDang/Redux-Project#readme",
+  "dependencies": {
+    "cloudinary": "^1.29.1"
+  }
 }
