--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "js-cookie": "^3.0.1",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-images-uploading": "^3.1.7",
     "react-redux": "^7.2.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
@@ -39,5 +40,5 @@
   "devDependencies": {
     "redux-logger": "^3.0.6"
   },
-    "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
